part_1/timestamper/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logger-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logger
  template:
    metadata:
      labels:
        app: logger
    spec:
      containers:
        - name: logger
          image: sokkanen/logger:107a
